fix basicgrid overflowing

--- a/src/util/layout.css
+++ b/src/util/layout.css
@@ -8,7 +8,7 @@
 
     & > * {
         flex-grow: 1;
-        flex-shrink: 0;
+        flex-shrink: 1;
         flex-basis: var(--col-width);
         margin: 0;
         min-width: 1px;
